# EleScrow

./: Cargo.toml  README.md  dfx.json  log.txt  package-lock.json  package.json  tsconfig.json
src/elescrow_backend/: Cargo.toml  elescrow_backend.did  generate_candid.sh
src/elescrow_backend/candid/: elescrow_backend.did
src/elescrow_backend/src/: lib.rs  messaging.rs  transactions.rs  types.rs
src/elescrow_backend/src/api/: admin_api.rs  mod.rs  notification_api.rs  transaction_api.rs  user_api.rs
src/elescrow_backend/src/models/: balance.rs  mod.rs  notification.rs  transaction.rs  user.rs
src/elescrow_backend/src/security/: audit.rs  mod.rs  validation.rs
src/elescrow_backend/src/services/: balance_service.rs  mod.rs  notification_service.rs  transaction_service.rs  user_service.rs
src/elescrow_backend/src/storage/: memory.rs  mod.rs  stable_storage.rs
src/elescrow_backend/src/types/: common.rs  errors.rs  messaging.rs  mod.rs  notification.rs  transaction.rs  user.rs
src/elescrow_backend/src/utils/: constants.rs  helpers.rs  mod.rs  time.rs
src/elescrow_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/elescrow_frontend/src/: App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src/elescrow_frontend/src/models/base/: base-component-props.i.ts
src/elescrow_frontend/src/models/form/: form-component-props.i.ts  form-context-data.i.ts  form-error.i.ts  form-validator-fn.i.ts  form-validators-data.i.ts
src/elescrow_frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  home-page.jsx  login-page.jsx  register-page.jsx
src/elescrow_frontend/src/pages/chat/: ChatPage.tsx
src/elescrow_frontend/src/pages/dashboard/: DashboardPage.tsx
src/elescrow_frontend/src/pages/home/: HomePage.tsx
src/elescrow_frontend/src/pages/login/: LoginPage.tsx
src/elescrow_frontend/src/pages/register/: RegisterPage.tsx
(+36 files in other folders)
