[package]
name = "elescrow_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.14"
ic-cdk = "0.12.3"
ic-cdk-macros = "0.8.4"
ic-stable-structures = "0.6.9"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true