[package]
name = "elescrow_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.14"
ic-cdk = "0.12.3"
ic-cdk-macros = "0.8.4"
ic-stable-structures = "0.6.9"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
regex = "1.10"
lazy_static = "1.4"
icrc-ledger-types = "0.1.5"
num-traits = "0.2"

[dev-dependencies]
ic-kit = "0.4"
tokio = { version = "1.35", features = ["full"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true